--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@sendgrid/mail": "^6.3.1",
     "body-parser": "^1.18.3",
     "debug": "^4.1.1",
+    "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "guid": "0.0.12",
     "http": "0.0.0",
